Fixed colours on boxes and code for dark mode

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -866,7 +866,7 @@ table tr td :last-child {
 
 code {
   padding: 0.125rem 0.25rem;
-  color: #c7254e;
+  color: #ececec;
   background-color: #f9f2f4;
   border-radius: 0.25rem;
 }
@@ -954,8 +954,8 @@ pre {
 }
 
 .box-note {
-  background-color: #eee;
-  border-left-color: #2980b9;
+  background-color: #385170;
+  border-left-color: #9fd3c7;
 }
 
 .box-warning {
